<resources>
    <string name="app_name">stock-fact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="login_text">"user name "</string>
    <string name="password">password</string>
    <string name="stock_products">Product\'s stoks</string>
    <string name="stock_invoices">invoices</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="fill_product_name">"fill product name "</string>
    <string name="fill_product_price">the product price  must be greater than 0</string>
    <string name="default_poduct">product</string>
    <string name="insufiscient">quantity not available</string>
    <string name="positive">please specify a positive quantity</string>
    <string name="confirm_command">Confirm your Order</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="user_name">user name</string>
    <string name="email">email</string>
    <string name="fill_this_field">fill this field</string>
</resources>
