<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.stock_fact.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
        <action
            android:id="@+id/action_nav_home_to_addproductFragment"
            app:destination="@id/addproductFragment" />
        <action
            android:id="@+id/action_nav_home_to_productList"
            app:destination="@id/productList" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.stock_fact.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.stock_fact.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.stock_fact.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/addproductFragment"
        android:name="com.example.stock_fact.ui.add_product.AddproductFragment"
        android:label="addproduct_fragment"
        tools:layout="@layout/addproduct_fragment" />
    <fragment
        android:id="@+id/productList"
        android:name="com.example.stock_fact.ui.product_list.ProductList"
        android:label="product_list_fragment"
        tools:layout="@layout/product_list_fragment" />
</navigation>