<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >







    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:background="@color/white"
            android:orientation="vertical"
            android:paddingTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="0.184"
            tools:layout_editor_absoluteX="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                >
                <ImageView
                android:layout_width="170dp"
                android:layout_height="156dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:src="@drawable/stockfac" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:background="@drawable/custom_btn2"
                    android:fontFamily="monospace"
                    android:padding="10dp"
                    android:text="Enregistrement"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="100dp" />


            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/user_first_name"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:hint="@string/first_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:id="@+id/user_last_name"
                        android:layout_marginEnd="40dp"
                        android:hint="@string/last_name" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:id="@+id/user_user_name"
                    android:hint="@string/user_name" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:id="@+id/user_password"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:id="@+id/user_mail"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:inputType="phone"
                    android:id="@+id/user_phon_number"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="16dp"
                android:columnCount="4"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:rowCount="4"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="0dp"
                tools:visibility="visible">

                <Button
                    android:id="@+id/login_register"
                    android:layout_width="106dp"
                    android:layout_height="35dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:background="@color/white"
                    android:paddingTop="0dp"
                    android:text="Connexion"
                    android:textColor="@color/colorAccent" />

                <Button
                    android:layout_width="124dp"
                    android:layout_height="36dp"
                    android:layout_row="1"
                    android:layout_column="3"
                    android:background="@drawable/custom_button"
                    android:text="S'enregistrer"
                    android:id="@+id/RegisterUser"
                    android:textColor="@color/white" />

            </GridLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>